--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,39 +1,74 @@
 <p id="notice"><%= notice %></p>
 
-<div>
-<%= @game.last_ball_called %>
+<script type="text/javascript">
+	$(function() {
+		$("#tabBottom").tabs();
+		$( "#accordionTL" ).accordion();
+		$( "#accordionTR" ).accordion();
+    });
+	</script>
 
+
+
+<div class="container_16">
+
+  <div class="grid_10" id="accordionTL">
+	<h3><a href="#">Last Ball</a></h3>
+    <div>
+    <span style="font-size:95pt;">
+  <%= @game.last_ball_called %>
+      &nbsp;
+    </span>
+      <span style="font-size:50px;">
 <%= link_to 'Next Ball',:action => :next_ball %>
-  
+   </span>
+   </div>
 </div>
 
 
-<div>
+<div class="grid_6" id="accordionTR">
+  <h3><a href="#">Last Few Balls</a></h3>
+  <div>
   <ul>
-  <% @game.called_numbers.reverse.each { | cn | %>
+  <% @game.called_numbers.reverse[0..9].each { | cn | %>
     <li><%= cn.called_ball %></li>
   <% } %>
   </ul>
+  </div>
 </div>
 
-<div>
+
+<div class="clear"> </div>
+<p>&nbsp;</p>
+  
+<div class="grid_16" id="tabBottom">
+  <ul><li><a href="#tabBottom-1">All Balls</a></li></ul>
+  <div class="grid_16" id="tabBottom-1">
+  <div class="grid_1">
   <ul>
     <% (1..@game.max_balls).each { | ball | %>
+        <% if ball%10 == 0 %>
+            </div>
+            <div class="grid_1">
+        <% end %>
         <%
-           li_style = "lfklfkdfl"
+           ball_style="color:plum;"
         if @game.has_been_called? ball
-            li_style = "font-weight:bold;"
-        else
-            li_style = "color:lightblue;"
+            ball_style = "font-weight:bold;color:yellow;"
         end
         %>
-      <li style="<%= li_style %>">
-        <%= ball %>
-      </li>
+      <span style="<%= ball_style %>">
+        <%= ball %><br>
+      </span>
     <% } %>
   </ul>
+  </div>
+  </div>
 </div>
 
+<div class="clear"> </div>
+
+<div class="grid_10">
 
 <p>
   <b>Max balls:</b>
@@ -43,3 +78,6 @@
 
 <%= link_to 'Edit', edit_game_path(@game) %> |
 <%= link_to 'Back', games_path %>
+
+</div>
+</div>
