--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,18 @@
 <head>
   <title>BingoCaller</title>
   <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag 'le-frog/jquery-ui-1.8.5.custom' %>
+
+<%= stylesheet_link_tag 'fluid960gs/reset' %>
+<%= stylesheet_link_tag 'fluid960gs/text' %>
+<%= stylesheet_link_tag 'fluid960gs/grid' %>
+<%= stylesheet_link_tag 'fluid960gs/layout' %>
+<%= stylesheet_link_tag 'fluid960gs/nav' %>
+
+
   <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag 'jquery-1.4.2.min' %>
+  <%= javascript_include_tag 'jquery-ui-1.8.5.custom.min' %>
   <%= csrf_meta_tag %>
 </head>
 <body>
