--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -15,13 +15,14 @@
   <div class="grid_10" id="accordionTL">
 	<h3><a href="#">Last Ball</a></h3>
     <div>
-    <span style="font-size:95pt;">
+    <div style="font-size:95pt;">
   <%= @game.last_ball_called %>
+      <%= audio_tag @caller_sound, :autoplay => true, :controls => true %>
       &nbsp;
-    </span>
-      <span style="font-size:50px;">
+    </div>
+      <div style="font-size:50px;width:100%; text-align:right">
 <%= link_to 'Next Ball',:action => :next_ball %>
-   </span>
+   </div>
    </div>
 </div>
 
