--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -5,7 +5,59 @@
 		$("#tabBottom").tabs();
 		$( "#accordionTL" ).accordion();
 		$( "#accordionTR" ).accordion();
+
+        $("#jquery_jplayer")
+        .jPlayer({
+            ready: function ()
+            {
+                this.element.jPlayer("setFile", "<%= @caller_sound %>").jPlayer("play");
+                showPauseBtn();
+            },
+            customCssIds: true
+        })
+        .jPlayer("onSoundComplete", function() {
+            this.element.jPlayer("play");
+        });
+        $("#pause").hide();
+        
+        function showPauseBtn()
+        {
+            $("#play").fadeOut(function(){
+                $("#pause").fadeIn();
+            });
+        }
+
+        function showPlayBtn()
+        {
+            $("#pause").fadeOut(function(){
+                $("#play").fadeIn();
+            });
+        }
+
+        function playTrack(t,n)
+        {
+            $("#jquery_jplayer").jPlayer("setFile", t).jPlayer("play");
+
+            showPauseBtn();
+
+            return false;
+        }
+
+        $("#play").click(function() {
+            $("#jquery_jplayer").jPlayer("play");
+            showPauseBtn();
+            return false;
+        });
+
+        $("#pause").click(function() {
+            $("#jquery_jplayer").jPlayer("pause");
+            showPlayBtn();
+            return false;
+        });
+
+        
     });
+
 	</script>
 
 
@@ -15,19 +67,32 @@
   <div class="grid_10" id="accordionTL">
 	<h3><a href="#">Last Ball</a></h3>
     <div>
-    <div style="font-size:95pt;">
+    <span style="font-size:95pt;">
   <%= @game.last_ball_called %>
-      <%= audio_tag @caller_sound, :autoplay => true, :controls => true %>
+      <!--<%= audio_tag @caller_sound, :autoplay => true, :controls => true, id => "audio" %>-->
+
       &nbsp;
-    </div>
-      <div style="font-size:50px;width:100%; text-align:right">
+    </span>
+      <span style="font-size:50px;width:100%; text-align:right">
 <%= link_to 'Next Ball',:action => :next_ball %>
-   </div>
+   </span>
    </div>
 </div>
 
+  <div class="grid_1">
+    <span id="jquery_jplayer"></span>
 
-<div class="grid_6" id="accordionTR">
+    <span id="player_container">
+            <ul id="icons" class="">
+                <li id="play" class="ui-state-default ui-corner-all"><span class="ui-icon ui-icon-play"></span></li>
+                <li id="pause" class="ui-state-default ui-corner-all"><span class="ui-icon ui-icon-pause"></span></li>
+            </ul>
+        </span>
+
+    
+  </div>
+
+<div class="grid_5" id="accordionTR">
   <h3><a href="#">Last Few Balls</a></h3>
   <div style="font-size:larger">
   <ul>
@@ -35,18 +100,21 @@
     <li><%= cn.called_ball %></li>
   <% } %>
   </ul>
+
   </div>
 </div>
 
 
 <div class="clear"> </div>
-<p>&nbsp;</p>
-  
+
+
+<div class="clear"> </div>
+  <p>&nbsp;</p>
+
 <div class="grid_16" id="tabBottom">
   <ul><li><a href="#tabBottom-1">All Balls</a></li></ul>
   <div class="grid_16" id="tabBottom-1">
   <div class="grid_1">
-  <ul>
     <% (1..@game.max_balls).each { | ball | %>
         <% if ball%10 == 0 %>
             </div>
@@ -62,7 +130,6 @@
         <%= ball %><br>
       </span>
     <% } %>
-  </ul>
   </div>
   </div>
 </div>
