--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>BingoCaller</title>
   <%= stylesheet_link_tag :all %>
   <%= stylesheet_link_tag 'le-frog/jquery-ui-1.8.5.custom' %>
+  <%= stylesheet_link_tag 'jplayer' %>
 
 <%= stylesheet_link_tag 'fluid960gs/reset' %>
 <%= stylesheet_link_tag 'fluid960gs/text' %>
@@ -15,6 +16,7 @@
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag 'jquery-1.4.2.min' %>
   <%= javascript_include_tag 'jquery-ui-1.8.5.custom.min' %>
+  <%= javascript_include_tag 'jquery.jplayer.min' %>
   <%= csrf_meta_tag %>
 </head>
 <body>
