--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,56 +6,11 @@
 		$( "#accordionTL" ).accordion();
 		$( "#accordionTR" ).accordion();
 
-        $("#jquery_jplayer")
-        .jPlayer({
-            ready: function ()
-            {
-                this.element.jPlayer("setFile", "<%= @caller_sound %>").jPlayer("play");
-                showPauseBtn();
-            },
-            customCssIds: true
-        })
-        .jPlayer("onSoundComplete", function() {
-            this.element.jPlayer("play");
-        });
-        $("#pause").hide();
-        
-        function showPauseBtn()
-        {
-            $("#play").fadeOut(function(){
-                $("#pause").fadeIn();
-            });
-        }
+        var pElement = document.getElementById("audio");
 
-        function showPlayBtn()
-        {
-            $("#pause").fadeOut(function(){
-                $("#play").fadeIn();
-            });
-        }
+            pElement.load();
+            pElement.play();
 
-        function playTrack(t,n)
-        {
-            $("#jquery_jplayer").jPlayer("setFile", t).jPlayer("play");
-
-            showPauseBtn();
-
-            return false;
-        }
-
-        $("#play").click(function() {
-            $("#jquery_jplayer").jPlayer("play");
-            showPauseBtn();
-            return false;
-        });
-
-        $("#pause").click(function() {
-            $("#jquery_jplayer").jPlayer("pause");
-            showPlayBtn();
-            return false;
-        });
-
-        
     });
 
 	</script>
@@ -67,30 +22,17 @@
   <div class="grid_10" id="accordionTL">
 	<h3><a href="#">Last Ball</a></h3>
     <div>
-    <span style="font-size:95pt;">
+    <div style="font-size:95pt;">
   <%= @game.last_ball_called %>
-      <!--<%= audio_tag @caller_sound, :autoplay => true, :controls => true, id => "audio" %>-->
+      <%= audio_tag @caller_sound, :controls => true, :id => "audio" %>
 
       &nbsp;
-    </span>
-      <span style="font-size:50px;width:100%; text-align:right">
+    </div>
+      <div style="font-size:50px;width:100%; text-align:right">
 <%= link_to 'Next Ball',:action => :next_ball %>
-   </span>
    </div>
 </div>
-
-  <div class="grid_1">
-    <span id="jquery_jplayer"></span>
-
-    <span id="player_container">
-            <ul id="icons" class="">
-                <li id="play" class="ui-state-default ui-corner-all"><span class="ui-icon ui-icon-play"></span></li>
-                <li id="pause" class="ui-state-default ui-corner-all"><span class="ui-icon ui-icon-pause"></span></li>
-            </ul>
-        </span>
-
-    
-  </div>
+</div>
 
 <div class="grid_5" id="accordionTR">
   <h3><a href="#">Last Few Balls</a></h3>
