--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -22,23 +22,27 @@
   <div class="grid_10" id="accordionTL">
 	<h3><a href="#">Last Ball</a></h3>
     <div>
-    <div style="font-size:95pt;">
-  <%= @game.last_ball_called %>
-      <%= audio_tag @caller_sound, :controls => true, :id => "audio" %>
+    <div style="font-size:160pt;text-align:center;width:100%">
+  <%= @game.last_ball_called %><br>
+      </div>
+</div>
+</div>
 
-      &nbsp;
-    </div>
-      <div style="font-size:50px;width:100%; text-align:right">
+  <div class="grid_5">
+  <span style="font-size:30px;width:100%; text-align:right">
 <%= link_to 'Next Ball',:action => :next_ball %>
-   </div>
+   </span>
 </div>
-</div>
+  
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
 
-<div class="grid_5" id="accordionTR">
+  <div class="grid_5" id="accordionTR">
   <h3><a href="#">Last Few Balls</a></h3>
   <div style="font-size:larger">
   <ul>
-  <% @game.called_numbers.reverse[0..9].each { | cn | %>
+  <% @game.called_numbers.reverse[0..7].each { | cn | %>
     <li><%= cn.called_ball %></li>
   <% } %>
   </ul>
@@ -46,16 +50,20 @@
   </div>
 </div>
 
-
-<div class="clear"> </div>
-
-
-<div class="clear"> </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
   <p>&nbsp;</p>
 
-<div class="grid_16" id="tabBottom">
+  <div class="grid_5">
+    <%= audio_tag @caller_sound, :controls => true, :id => "audio" %>
+    </div>
+  
+</div>
+
+<div class="container_12">
+<div class="grid_12" id="tabBottom">
   <ul><li><a href="#tabBottom-1">All Balls</a></li></ul>
-  <div class="grid_16" id="tabBottom-1">
+  <div class="grid_12" id="tabBottom-1">
   <div class="grid_1">
     <% (1..@game.max_balls).each { | ball | %>
         <% if ball%10 == 0 %>
