tweak layout, add session concept, add auto advance bits

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :max_balls %><br />
     <%= f.text_field :max_balls %>
   </div>
+  <div class="field">
+    <%= f.label :secs_between_calls %><br />
+    <%= f.text_field :secs_between_calls %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
