--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -11,6 +11,11 @@
     </div>
   <% end %>
 
+<% if @bingo_session %>
+In Bingo Session: <%= @bingo_session.id %>, created at <%= @bingo_session.created_at %>
+<%= f.hidden_field :bingo_session_id, :value => @bingo_session.id %>
+<br>&nbsp;
+<% end %>
   <div class="field">
     <%= f.label :max_balls %><br />
     <%= f.text_field :max_balls %>
