--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -78,14 +78,13 @@
 	<h3><a href="#">Current Ball</a></h3>
     <div>
     <div style="text-align:center;width:100%">
-    <div style="font-size:200pt;">
-      <% if @game.last_ball_called %>
-  <%= @game.last_ball_called %>
-      <% else %>
+<div style="font-size:200pt">
+<% if @game.last_ball_called %>
+<%= @game.last_ball_called %>
+<% else %>
           &nbsp;
-          <% end %>
-    </div>
-      <br>
+<% end %>
+</div>
       <% if @game.player_with_first_line == nil %>
           <span class="game_controls"><button onclick="handleWinnerLine();">Line?</button></span>
       <% elsif @game.player_with_bingo == nil %>
@@ -148,7 +147,7 @@
     <li><a href="#tab-players">Players</a></li>
     <li><a href="#tab-session">Session</a></li>
   </ul>
-  <div class="grid_12" id="tab-balls" style="font-size:20pt">
+  <div class="grid_12" id="tab-balls" style="font-size:16pt">
   <div class="grid_1">&nbsp;</div>
   <div class="grid_1">
     <% (1..@game.max_balls).each { | ball | %>
