--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,20 +2,10 @@
 <html>
 <head>
   <title>Bingo Caller</title>
-  <%= stylesheet_link_tag :all %>
-  <%= stylesheet_link_tag 'application' %>
-  <%= stylesheet_link_tag 'le-frog/jquery-ui-1.8.5.custom' %>
 
-<%= stylesheet_link_tag 'fluid960gs/reset' %>
-<%= stylesheet_link_tag 'fluid960gs/text' %>
-<%= stylesheet_link_tag 'fluid960gs/grid' %>
-<%= stylesheet_link_tag 'fluid960gs/layout' %>
-<%= stylesheet_link_tag 'fluid960gs/nav' %>
+<%= stylesheet_link_tag    "application" %>
+<%= javascript_include_tag "application" %>
 
-
-  <%= javascript_include_tag :defaults %>
-  <%= javascript_include_tag 'jquery-1.4.2.min' %>
-  <%= javascript_include_tag 'jquery-ui-1.8.5.custom.min' %>
   <%= csrf_meta_tag %>
 
 <script type="text/javascript">
