update auto/pause mechanism to work with backbone

--- a/app/assets/javascripts/backbone/templates/game_controls_view.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/game_controls_view.jst.ejs
@@ -2,4 +2,6 @@
   <button id="next_ball">Next</button>
   <!--< %= link_to 'Next',:action => :next_ball %>-->
 </span>
+<span class="game_controls"><button id="btn_auto">Auto</button></span>
+<span class="game_controls"><button id="btn_pause">Pause</button></span>
 
