backbone'd the ball caller view

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -28,9 +28,7 @@
   <p>&nbsp;</p>
   <p>&nbsp;</p>
 
-  <div class="grid_5">
-    <%= audio_tag @caller_sound, :controls => true, :id => "audio" %>
-    </div>
+  <span id="ball-caller"></span>
   
 </div>
 
