--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,10 +2,10 @@
 <script type="text/javascript">
 
 	$(function() {
-        BingoCaller.start(<%= caller_session['auto'].present? %>,
+        bingo = BingoCaller.start(<%= caller_session['auto'].present? %>,
                 "<%= params['stab'] %>",
                 '<%= url_for :action => :next_ball %>',
-                <%= @game.secs_between_calls %>,<%= @game.id %>);
+                <%= @game.secs_between_calls %>,<%= @game.id %>, <%= @game.bingo_session_id %>);
     });
 
 	</script>
@@ -18,7 +18,7 @@
 
   <div class="grid_6">
     <span id="game-controls"></span>
-</div>
+  </div>
   
   <p>&nbsp;</p>
 
@@ -43,10 +43,13 @@
     <li><a href="#tab-players">Players</a></li>
     <li><a href="#tab-session">Session</a></li>
   </ul>
-  <div class="grid_12" id="tab-balls" style="font-size:16pt">
-    <span id="game-summary"/>
+  <div class="" id="tab-balls" style="font-size:16pt">
+      <div class="grid_12 alpha omega">
+        <span id="game-summary"/>
+      </div>
   </div>
-  <div class="grid_12" id="tab-session" >
+  <div class="" id="tab-session" >
+  <div class="grid_12 alpha omega">
     <% if @game.bingo_session %>
     In Bingo Session: <%= @game.bingo_session.id %>, created at <%= @game.bingo_session.created_at %>
 
@@ -82,56 +85,10 @@
     <% end %>
 
   </div>
-  <div class="grid_12" id="tab-players" >
-    <div class="grid_7">
-    <table>
-    <% @game.player_games.each do | p | %>
-    <tr><%= form_for(p) do |f| %>
-    <td><%= p.player.name %></td><td>
-		<%= f.select( :cards_played, options_for_select([[1,1], [2,2], [3,3], [4,4], [5,5], [6,6], [7,7], [8,8], [9,9]], p.cards_played)) %>
-</td>
-<td>      <% if @game.player_with_first_line and @game.player_with_first_line == p.player %>**LINE**<% end %>
-      <% if @game.player_with_bingo and @game.player_with_bingo == p.player %>**HOUSE**<% end %></td>
-<td>
-	<button type="submit" class="positive">
-	<span class="ui-icon ui-icon-disk"></span>
-	</button>
-	</td>
-	<% end %>
-<td>
-    <%= form_for(p, :html => { :method => "delete" }, :confirm => "Are you sure?") do |f| %>
-	<button type="submit" class="positive">
-	<span class="ui-icon ui-icon-trash"></span>
-	</button>
-<% end %>
-	</td>
-</tr>
-    <% end %>
-</table>
-    </div>
-    <div class="grid_5">
-    Add Player:<br>
-    <%= form_for(@player_game) do |f| %>
-        <div class="field">
-          <%= f.hidden_field :game_id, :value => @game.id %>
-        </div>
-        <div class="field">
-          <%= f.label :player_id %><br />
-          <%= f.select :player_id,
-                       options_from_collection_for_select(@game.bingo_session.players, :id, :name) %><br>
-          <label for="player_other">New Player</label><br>
-          <input type="text" name="player_other">
-        </div>
-        <div class="field">
-          <%= f.label :cards_played %><br />
-<%= f.select( :cards_played, options_for_select([[1,1], [2,2], [3,3], [4,4], [5,5], [6,6], [7,7], [8,8], [9,9]], 3)) %>
-        </div>
-        <div class="actions">
-          <%= f.submit %>
-        </div>
-    <% end %>
-      </div>
-</div>
+  </div>
+  <div class="" id="tab-players" >
+    <div class="" id="game-player-maintenance"></div>
+  </div>
 </div>
 
 <div class="clear"> </div>
